<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewDemandActivity"
    android:background="@color/pink">

    <TextView
        android:id="@+id/TitleNewDemand"
        android:layout_width="351dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/nouvelle_demande"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/editTitleNewDemand"
        android:layout_width="165dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/titre"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sendTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/titre"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TitleSubject"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:text="@string/sujet"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sendSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/sujet"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/TitleCategory"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="320dp"
        android:text="@string/categorie"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="379dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="352dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/TitleQuestion"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="404dp"
        android:text="@string/question"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="379dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="436dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sendQuestion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/question"
            android:background="@color/white"
            android:gravity="bottom"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendDemand"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="600dp"
        android:text="@string/envoyer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>