<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAnswerActivity"
    android:background="@color/pink">


    <TextView
        android:id="@+id/titleOfDemand"
        android:layout_width="294dp"
        android:layout_height="72dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:text="placeholderTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight=".100"
                    android:background="@android:color/black" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight=".100"
                    android:background="@android:color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="150sp">

                <TextView
                    android:id="@+id/newAnswerComment"
                    android:layout_width="wrap_content"
                    android:layout_height="150sp"
                    android:text="placeholdercomment"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_weight=".100"
                    android:background="@android:color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newanswer"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight=".100"
                    android:background="@android:color/black" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="200sp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    tools:layout_editor_absoluteX="-129dp"
                    tools:layout_editor_absoluteY="545dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sendAnswer"
                        android:layout_width="351dp"
                        android:layout_height="200sp"
                        android:background="@color/white"
                        android:hint="@string/newanswer"
                        android:imeOptions="actionDone"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="2sp"
                    android:layout_weight=".100"
                    android:background="@android:color/black" />
            </TableRow>
        </TableLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="165dp"
        android:layout_height="58dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="580dp"
        android:text="@string/envoyer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>